components and services added

--- a/cicdapp/src/app/app.component.html
+++ b/cicdapp/src/app/app.component.html
@@ -2,3 +2,6 @@
   <li><a routerLink="/contactus">ContactUs</a></li>
   <li><a routerLink="/expertise">Expertise</a></li>
 </ul>
+
+
+<router-outlet></router-outlet>
