--- a/cicdapp/src/app/components/contactus/contactus.component.html
+++ b/cicdapp/src/app/components/contactus/contactus.component.html
@@ -1,1 +1,15 @@
-<p>contactus works!</p>
+<h2>Contact Us!</h2>
+<hr>
+
+<form #contactForm="ngForm" (ngSubmit)="getUserData(contactForm)">
+  <label for="firstname">Name:</label> &nbsp;&nbsp;
+  <input type="text" name="firstname" ngModel> <br><br>
+  <label for="email">Email:</label> &nbsp;&nbsp;
+  <input type="text" name="email" ngModel> <br><br>
+  <label for="phone">Phone:</label> &nbsp;&nbsp;
+  <input type="number" name="phone" ngModel> <br><br>
+  <label for="msg">Message:</label> &nbsp;&nbsp;
+  <input type="text" name="msg" ngModel> <br><br>
+
+  <button type="submit">Send</button>
+</form>
